feat: implement swagger documentation & fix update bug
